# MTDS_LW_1-2

./: README.md
.github/workflows/: c-cpp.yml  msbuild.yml
MTDS_LW_1-2/: MTDS_LW_1-2.sln
MTDS_LW_1-2/MTDS_LW_1-2/: Application.cpp  Application.h  CMakeLists.txt  FileManager.cpp  MTDS_LW_1-2.vcxproj  MTDS_LW_1-2.vcxproj.filters  MarkdownParser.cpp  MarkdownParser.h  MarkdownParserConstructorTest.cpp  MarkdownParserFormattingTest.cpp  MarkdownParserIntegrationTest.cpp  UniversalMarkdownHandler.cpp
MTDS_LW_1-2/MTDS_LW_1-2/configure/: about.txt.txt
MTDS_LW_1-2/MTDS_LW_1-2/x64/Release/: MTDS_LW_1-2.exe.recipe  MTDS_LW_1-2.vcxproj.FileListAbsolute.txt
MTDS_LW_1-2/MTDS_test/: MTDS_test.vcxproj  MarkdownParserConstructorTest.cpp  MarkdownParserEdgeCasesTest.cpp  MarkdownParserFormattingTest.cpp  MarkdownParserIntegrationTest.cpp  main_test.cpp
MTDS_LW_1-2/MTDS_test/x64/Release/: MTDS_test.exe.recipe  MTDS_test.vcxproj.FileListAbsolute.txt
MTDS_LW_1-2/incase/: CMakeLists.txt
MTDS_LW_1-2/modules/: FileManager.h  UniversalMarkdownHandler.h
MTDS_LW_1-2/tests/: MarkdownParserEdgeCasesTest.cpp
MTDS_LW_1-2/x64/Release/: markdown_example.md  output.html  test1.md  test2.html
Sample-Test1/: Sample-Test1.sln
Sample-Test1/Sample-Test1/: Sample-Test1.vcxproj
